--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,11 @@ services:
   - docker
 go:
   - tip
+before_install:
+- apt-get update
+- apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
+- sudo docker --version
 install: true
-# all deps are now vendored
-#before_install:
-#  - go get -v ./...
 script:
   - ./.travis-test.sh
 after_success:
