Use sudo for docker travis update

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ services:
 go:
   - tip
 before_install:
-- apt-get update
-- apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
+- sudo apt-get update
+- sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
 - sudo docker --version
 install: true
 script:
