Make skip-tls option more descriptive, add usage. Addresses #114

--- a/config.yml
+++ b/config.yml
@@ -8,4 +8,4 @@ registries:
     #username: exampleUser
     #password: examplePassword
     #refresh-rate: "5m"
-    #skip-tls: true
+    #skip-tls-validation: true # REQUIRED for self signed certificates
